--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -10,6 +10,29 @@ model:
   filename: graph/model/models_gen.go
   package: model
 
+    
+models:
+  ID:
+    model:
+      - github.com/99designs/gqlgen/graphql.ID
+      - github.com/99designs/gqlgen/graphql.Int
+      - github.com/99designs/gqlgen/graphql.Int64
+      - github.com/99designs/gqlgen/graphql.Int32
+  Int:
+    model:
+      - github.com/99designs/gqlgen/graphql.Int
+  Int32:
+    model:
+      - github.com/99designs/gqlgen/graphql.Int32
+  Int64:
+    model:
+      - github.com/99designs/gqlgen/graphql.Int64
+  Uint64:
+    model:
+      - github.com/99designs/gqlgen/graphql.Uint64
+
+
+
 resolver:
   layout: follow-schema
   dir: graph
